The below changes are for Java support: https://github.com/openshiftio/openshift.io/issues/4319
1. Modified the slaveTemplate method to spawn a pod with java_opts and maven_opts for java slave container
2. Adding runTest api so that we don't use spwan directly from Jenkisfile to run the tests